# BeanBay

./: .gitignore  Dockerfile  README.md  hatch_build.py  pyproject.toml  skills-lock.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/03-optimization-loop/: 03-UAT.md  03-VERIFICATION.md
.planning/phases/04-shot-history-feedback-depth/: 04-CONTEXT.md
.planning/phases/05-insights-trust/: 05-01-SUMMARY.md  05-UAT.md
app/: config.py  database.py  main.py
app/models/: campaign_state.py  measurement.py
app/routers/: beans.py  brew.py  history.py  insights.py
app/services/: optimizer.py  optimizer_key.py  similarity.py  transfer_learning.py
app/static/css/: input.css  main.css
app/templates/: base.html
frontend/: package.json
frontend/src/: App.tsx
migrations/versions/: 080ccd3b160a_add_person_id_and_optimization_mode_to_.py  0df4259bb556_add_optimization_columns_to_brews.py  64a82453ad53_initial_schema_tz_aware.py  afda093129ec_remove_grinder_display_format_column.py  c06d948aa2d7_add_is_manual_to_measurements.py
src/beanbay/: dependencies.py  main.py  seed.py
tests/: conftest.py  test_analytics.py  test_beans.py  test_brew.py  test_brew_multimethod.py  test_history.py  test_insights.py  test_models.py  test_optimizer.py  test_similarity.py  test_transfer_learning.py  test_transfer_learning_integration.py
tests/integration/: test_beans_api.py  test_brews_api.py  test_cuppings_api.py  test_optimize_api.py  test_people_api.py  test_seed.py  test_stats_api.py
tests/unit/: test_subsample.py
(+135 files in other folders)
