[project]
name = "beanbay"
version = "0.1.0"
description = "BeanBay — Phone-first espresso optimization with Bayesian optimization (BayBE)"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "alembic>=1.18",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/beanbay/_version.py"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (BayBE integration)"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
